	checked for in the appropriate header.

    o	sysconf() is now used to find the number of clock ticks/second:
	under some circumstances glibc reported 60 when the true value
	was 100.


UTILITIES

    o	R CMD check now uses an install log by default.

    o	R CMD INSTALL now uses more randomness in the temporary
	directory even on systems without mktemp -d.


C-LEVEL FACILITIES

    o	qgamma and rgamma in Rmath.h now check for non-positive arguments.

    o	The BLAS which ships with R now contains the complete set of
	double-complex BLAS routines, rather than just those used in R.

	<R_ext/BLAS.h> has been corrected to add the missing
	double-precision BLAS functions drotmg and drotm, and to
	exclude lsame (which is a Lapack auxiliary function and is now
	declared in <R_ext/Lapack.h>).  It also includes the double
	complex routines added for this release of R provided Fortran
	doublecomplex is usable on the platform.

    o	<R_ext/BLAS.h> and <R_ext/Lapack.h> now declare all the entry
	points as 'extern'.


BUG FIXES

    o	Quoted arguments to the R script after --args are now
	passed quoted to the R executable and so will be shown as
	expected by commandArgs().  (They were previously split at
	whitespace even inside quotes on Unix-alikes but not on
	Windows.)

    o	axis() now supports pars 'xaxp'/'yaxp' as inline arguments.

    o	sort() now does not return inappropriate attributes such as
	"dim" and "tsp": it only returns names.

	sort(x, partial=) no longer returns unsorted names, and drops
	names (since it is supplied for efficiency).

    o   Use of non-central F in pf() gives accurate values for larger ncp.

    o   R CMD build --binary does a better job of cleaning up after
	failure to re-make vignettes.

    o	t() now longer drops dimnames 'list(NULL,NULL)' or 'list(NULL)'.

    o	reg-test-1.R tested system(intern=TRUE) which depends on popen
	and so is not supported on all platforms.




	**************************************************
	*						 *